--- a/Prototipo 1/siteGPTcode/index.html
+++ b/Prototipo 1/siteGPTcode/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#inicio">GPesquisa</a>
+            <a class="navbar-brand" href="#inicio"><img src="img/logo-removebg-preview (1).png" style="width: 150px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,6 +49,7 @@
     </nav>
 
     <section id="inicio" class="d-flex align-items-center text-center">
+       
         <div class="container">
             <h1 class="display-3 text-white">Grupo de Pesquisa em IA Aplicada</h1>
             <p class="lead text-white-50">Explorando as fronteiras do conhecimento para resolver problemas complexos do mundo real.</p>
