Texto exemplo section 1

--- a/Prototipo 1/siteGPTcode/index.html
+++ b/Prototipo 1/siteGPTcode/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#inicio"><img src="img/logo.jpg" style="width: 150px;"></a>
+            <a class="navbar-brand" href="#inicio"><img src="img/logo-removebg-preview (1).png" style="width: 150px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,13 +49,16 @@
     <section id="inicio" class="d-flex align-items-center text-center">
        
         <div class="container">
-            <h1 class="display-3 text-white">Grupo de Pesquisa em Tecnologias Computacionais</h1>
-            <p class="lead text-white-50">Explorando as fronteiras do conhecimento para resolver problemas complexos do mundo real.</p>
-            <a href="#pesquisa" class="btn btn-primary btn-lg mt-3">Conheça Nossas Pesquisas</a>
+            <img src="img/logo.jpg" style="max-width:40%;height: auto;">
+            <p class="lead text-black-40">O GPTCode é um grupo de pesquisa focado em Tecnologias Computacionais. 
+                Ele reúne pesquisadores e estudantes que colaboram no desenvolvimento de projetos de pesquisa científica.
+                 Nosso objetivo é explorar novas ideias e criar soluções inovadoras na área da computação, contribuindo 
+                 tanto para o avanço do conhecimento quanto para a formação de novos talentos.</p>
+            <a href="http://dgp.cnpq.br/dgp/espelhogrupo/6357808047600163" class="btn">Conheça o grupo </a>
         </div>
     </section>
 
-    <main class="container my-5">
+    <main class="container-fluid my-5">
         <section id="pesquisa" class="py-5">
             <h2 class="text-center mb-5">Linhas de Pesquisa</h2>
             <div class="row">
@@ -65,7 +68,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Processamento de Linguagem Natural</h5>
                             <p class="card-text">Desenvolvimento de modelos para análise de sentimentos, tradução automática e sumarização de textos em português.</p>
-                            <a href="projeto-detalhe.html" class="btn btn-outline-primary">Saiba Mais</a>
+                            <a href="projeto-detalhe.html" class="btn">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +78,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Visão Computacional na Saúde</h5>
                             <p class="card-text">Aplicação de redes neurais convolucionais para detecção precoce de patologias em imagens médicas.</p>
-                            <a href="projeto-detalhe.html" class="btn btn-outline-primary">Saiba Mais</a>
+                            <a href="projeto-detalhe.html" class="btn ">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -85,10 +88,11 @@
                         <div class="card-body">
                             <h5 class="card-title">Sistemas de Recomendação</h5>
                             <p class="card-text">Criação de algoritmos de recomendação personalizados para e-commerce e plataformas de streaming.</p>
-                            <a href="projeto-detalhe.html" class="btn btn-outline-primary">Saiba Mais</a>
+                            <a href="projeto-detalhe.html" class="btn">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
+                <a href="#" class="btn d-grid gap-2 col-2 mx-auto ">Saiba Mais</a>
             </div>
         </section>
 
@@ -98,7 +102,7 @@
                 <div class="list-group">
                     <a href="#" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Título do Artigo 1</h5>
+                            <h5 class="mb-1"> Artigo 1</h5>
                             <small>2025</small>
                         </div>
                         <p class="mb-1">Autores: Silva, A., Souza, B., Pereira, C.</p>
@@ -106,7 +110,7 @@
                     </a>
                     <a href="#" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Título do Artigo 2</h5>
+                            <h5 class="mb-1">    Artigo 2</h5>
                             <small>2024</small>
                         </div>
                         <p class="mb-1">Autores: Costa, D., Lima, E.</p>
@@ -169,7 +173,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.171891829913!2d-46.65657158440696!3d-23.56233566750371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c8da0aa315%3A0x206c48068e06338e!2sAv.%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1678886562479!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10197.568990155969!2d-47.87780387751797!3d-15.757321411831406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3b1e02415707%3A0x3060d8a3139ab079!2sIFB%20Campus%20Bras%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1751474049978!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -177,7 +181,7 @@
 
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class=" text-white text-center py-3">
         <div class="container">
             <p>&copy; 2025 Nome do Grupo de Pesquisa. Todos os direitos reservados.</p>
             <p>Filiado à <a href="#" class="text-white">Universidade Exemplo</a></p>
