Muitas coisas:nav da pagina-detalhe,Linha de pesquisa,nossa equipe

--- a/Prototipo 1/siteGPTcode/pagina-detalhe.html
+++ b/Prototipo 1/siteGPTcode/pagina-detalhe.html
@@ -1,136 +1,223 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes: Processamento de Linguagem Natural | GPesquisa</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Detalhes: Redesign do Portal IFB | GPesquisa</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">GPesquisa</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#inicio">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#pesquisa">Pesquisa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#publicacoes">Publicações</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#equipe">Equipe</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#noticias">Notícias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contato">Contato</a>
-                    </li>
-                </ul>
-            </div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/logoicon.png" type="image/x-icon" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#inicio"
+          ><img src="img/logo-removebg-preview (1).png" style="width: 150px"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#resumo">Resumo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#objetivos">Objetivos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#metodologia">Metodologia</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <main class="container my-5 pt-5">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Início</a></li>
+          <li class="breadcrumb-item">
+            <a href="index.html#pesquisa">Pesquisa</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Redesign do Portal IFB
+          </li>
+        </ol>
+      </nav>
 
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Início</a></li>
-                <li class="breadcrumb-item"><a href="index.html#pesquisa">Pesquisa</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Processamento de Linguagem Natural</li>
-            </ol>
-        </nav>
+      <div class="row">
+        <div class="col-lg-8">
+          <h1 class="mb-4">
+            Desenvolvimento de Plataformas Web:Redesign do Portal IFB
+          </h1>
+          <img
+            src="img/Site-PIPA.png"
+            class="img-fluid rounded mb-4"
+            alt="Imagem descritiva do projeto de PLN"
+          />
 
-        <div class="row">
-            <div class="col-lg-8">
-                <h1 class="mb-4">Processamento de Linguagem Natural (PLN)</h1>
-                <img src="https://via.placeholder.com/800x400.png?text=Imagem+Principal+do+Projeto" class="img-fluid rounded mb-4" alt="Imagem descritiva do projeto de PLN">
+          <section id="resumo" class="mb-5">
+            <h3>Resumo</h3>
+            <p>
+              Este trabalho diagnostica a usabilidade e acessibilidade do portal
+              do IFB, identificando falhas críticas através de análise
+              heurística e das diretrizes WCAG. Em resposta, um protótipo
+              funcional foi desenvolvido para modernizar a interface, otimizar a
+              navegação e promover a inclusão digital. A positiva aceitação do
+              protótipo pela comunidade acadêmica valida a proposta como uma
+              solução viável e necessária para a comunicação institucional.
+            </p>
+          </section>
 
-                <section id="resumo" class="mb-5">
-                    <h3>Resumo</h3>
-                    <p>Esta linha de pesquisa foca no desenvolvimento de algoritmos e modelos computacionais capazes de compreender, interpretar e gerar linguagem humana. Nosso trabalho abrange desde a análise de sentimentos em redes sociais até a criação de assistentes virtuais e sistemas de tradução automática, com um foco especial na língua portuguesa.</p>
-                </section>
+          <section id="objetivos" class="mb-5">
+            <h3>Objetivos</h3>
+            <ul>
+              <li>
+                Analisar os pontos fortes e as fragilidades do portal do IFB.
+              </li>
+              <li>Diagnosticar usabilidade e acessibilidade.</li>
+              <li>Propor recomendações para otimização.</li>
+              <li>Desenvolver um protótipo funcional.</li>
+              <li>Validar a proposta com a comunidade acadêmica.</li>
+            </ul>
+          </section>
 
-                <section id="objetivos" class="mb-5">
-                    <h3>Objetivos</h3>
-                    <ul>
-                        <li>Desenvolver modelos de linguagem (Language Models) de alta performance para o português brasileiro.</li>
-                        <li>Criar um dataset robusto para tarefas de sumarização de notícias e documentos legais.</li>
-                        <li>Investigar a aplicação de modelos de PLN para detecção de fake news.</li>
-                        <li>Aprimorar a acessibilidade digital através de sistemas de conversão de texto em fala (Text-to-Speech).</li>
-                    </ul>
-                </section>
-
-                <section id="metodologia" class="mb-5">
-                    <h3>Metodologia</h3>
-                    <p>Utilizamos arquiteturas de redes neurais profundas, principalmente baseadas em Transformers (como BERT e GPT). A metodologia inclui a coleta e pré-processamento de grandes volumes de texto, o treinamento e fine-tuning dos modelos em hardware especializado (GPUs), e a avaliação rigorosa usando métricas como BLEU, ROUGE e F1-score.</p>
-                </section>
-
-                <section id="publicacoes-relacionadas">
-                    <h3>Publicações Relacionadas</h3>
-                    <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h6 class="mb-1">Um Modelo Transformer para Análise de Sentimentos em Português</h6>
-                                <small>2024</small>
-                            </div>
-                            <small>Autores: Souza, B., Pereira, C. | Anais da Conferência ABC.</small>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h6 class="mb-1">Sumarização Automática de Documentos Jurídicos</h6>
-                                <small>2023</small>
-                            </div>
-                            <small>Autores: Silva, A. | Revista de Inteligência Artificial Aplicada.</small>
-                        </a>
-                    </div>
-                </section>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="card shadow-sm sticky-top" style="top: 100px;">
-                    <div class="card-header">
-                        <h5 class="mb-0">Detalhes do Projeto</h5>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><strong><i class="bi bi-person-fill me-2"></i>Coordenador(a):</strong><br>Dr. João da Silva</li>
-                            <li class="mb-2"><strong><i class="bi bi-people-fill me-2"></i>Equipe:</strong><br>Maria Souza, Carlos Pereira</li>
-                            <li class="mb-2"><strong><i class="bi bi-calendar-check-fill me-2"></i>Status:</strong><br><span class="badge bg-success">Em Andamento</span></li>
-                            <li class="mb-2"><strong><i class="bi bi-cash-coin me-2"></i>Financiamento:</strong><br>Agência de Fomento Exemplo (AFE)</li>
-                            <li class="mb-2"><strong><i class="bi bi-tags-fill me-2"></i>Palavras-chave:</strong><br>
-                                <span class="badge bg-secondary">PLN</span>
-                                <span class="badge bg-secondary">IA</span>
-                                <span class="badge bg-secondary">Transformers</span>
-                            </li>
-                        </ul>
-                    </div>
+          <section id="metodologia" class="mb-5">
+            <h3>Metodologia</h3>
+            <p>
+              Este estudo realizou um diagnóstico do portal atual do IFB e
+              desenvolveu um protótipo aprimorado. A primeira fase envolveu uma
+              análise crítica da usabilidade. Na segunda fase, os problemas
+              identificados serviram como base para o redesenho da interface e
+              da arquitetura da informação na plataforma Figma, seguindo os
+              princípios do Design Centrado no Usuário. Por fim, foi
+              desenvolvido um protótipo funcional e responsivo utilizando HTML5,
+              CSS3 com Bootstrap e JavaScript, com o objetivo de solucionar as
+              falhas encontradas.
+            </p>
+          </section>
+          <!--
+          <section id="publicacoes-relacionadas">
+            <h3>Publicações Relacionadas</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h6 class="mb-1">
+                    Um Modelo Transformer para Análise de Sentimentos em
+                    Português
+                  </h6>
+                  <small>2024</small>
                 </div>
+                <small
+                  >Autores: Souza, B., Pereira, C. | Anais da Conferência
+                  ABC.</small
+                >
+              </a>
+              <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h6 class="mb-1">
+                    Sumarização Automática de Documentos Jurídicos
+                  </h6>
+                  <small>2023</small>
+                </div>
+                <small
+                  >Autores: Silva, A. | Revista de Inteligência Artificial
+                  Aplicada.</small
+                >
+              </a>
             </div>
+          </section>
+          -->
         </div>
+
+        <div class="col-lg-4">
+          <div class="card shadow-sm sticky-top" style="top: 100px">
+            <div class="card-header">
+              <h5 class="mb-0">Detalhes do Projeto</h5>
+            </div>
+            <div class="card-body">
+              <ul class="list-unstyled">
+                <li class="mb-2">
+                  <strong
+                    ><i class="bi bi-person-fill me-2"></i
+                    >Coordenador(a):</strong
+                  ><br />Dr. Dauster Souza
+                </li>
+                <li class="mb-2">
+                  <strong><i class="bi bi-people-fill me-2"></i>Equipe:</strong
+                  ><br />Davi Rocha, Fernando Fábio
+                </li>
+                <li class="mb-2">
+                  <strong
+                    ><i class="bi bi-calendar-check-fill me-2"></i
+                    >Status:</strong
+                  ><br /><span class="badge bg-success">Finalizado</span>
+                </li>
+                <!--
+                <li class="mb-2">
+                  <strong
+                    ><i class="bi bi-cash-coin me-2"></i>Financiamento:</strong
+                  ><br />Agência de Fomento Exemplo (AFE)
+                </li>
+                -->
+                <li class="mb-2">
+                  <strong
+                    ><i class="bi bi-tags-fill me-2"></i>Palavras-chave:</strong
+                  ><br />
+                  <span class="badge bg-secondary">IFB</span>
+                  <span class="badge bg-secondary">usabilidade</span>
+                  <span class="badge bg-secondary">acessibilidade</span>
+                  <span class="badge bg-secondary">design responsivo</span>
+                  <span class="badge bg-secondary"
+                    >comunicação institucional</span
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
-        <div class="container">
-            <p>© 2025 Nome do Grupo de Pesquisa. Todos os direitos reservados.</p>
-            <p>Filiado à <a href="#" class="text-white">Universidade Exemplo</a></p>
-        </div>
+      <div class="container">
+        <p>© 2025 Nome do Grupo de Pesquisa. Todos os direitos reservados.</p>
+        <p>Filiado à <a href="#" class="text-white">Universidade Exemplo</a></p>
+      </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
