pagina detalhe prot_3

--- a/Prototipo 3/index_v3.html
+++ b/Prototipo 3/index_v3.html
@@ -96,7 +96,11 @@
                 </div>
                 <div class="publication-list">
                     <div class="publication-item">
-                        <p class="mb-1"><strong>Um Framework para Análise de Segurança em Aplicações Web.</strong></p>
+                        <p class="mb-1">
+                            <a href="publicacao_detalhe.html" class="publication-title">
+                                <strong>Um Framework para Análise de Segurança em Aplicações Web.</strong>
+                            </a>
+                        </p>
                         <p class="authors">Silva, J., Costa, M. (2025). <em>Anais do Simpósio Brasileiro de Segurança da Informação.</em> <a href="#">[PDF]</a></p>
                     </div>
                     <div class="publication-item">
